--- a/style.css
+++ b/style.css
@@ -39,6 +39,9 @@ html, body {
   position: absolute;
   margin-bottom: 10vh;
   font-size: 70px;
+  font-family: 'Open Sans', sans-serif;
+  color: white;
+  background-color: black;
 }
 
 .bottone {
