--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 .tastiera {
-    width: 670px;
+    width: 91vw;
     top: 100px;
     left: 50%;
     position: absolute;
@@ -16,7 +16,7 @@ html, body {
 
 .tasto {
     display: inline-block;
-    width: 130px;
+    width: 18vw;
     height: 130px;
     text-align: center;
     font-size: 100px;
