--- a/style.css
+++ b/style.css
@@ -1,11 +1,285 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    background: black;
+    overflow: hidden;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10+ and Edge */
+    user-select: none; /* Standard syntax */
+
+}
+
+.animazione {
+    top: 0;
+    width: 50vw;
+    height: 70vh;
+    position: fixed;
+}
+
+.guida {
+    top: 0;
+    left: 50vw;
+    width: 50vw;
+    height: 35vh;
+    position: fixed;
+}
+
+.colore, .forma, .stile, .durata {
+    position: fixed;
+    width: 25vw;
+    height: 30vh;
+    top: 70vh;
+}
+
+.forma {
+    left: 25vw;
+}
+
+.stile {
+    left: 50vw;
+}
+
+.durata {
+    left: 75vw;
+}
+
+#elemento {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    background-color: white;
+    /*border: 50px solid transparent;*/
+}
+
+.orizzontale {
+    position: absolute;
+    top: 50%;
+    left: 15%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: mymove_oriz 14s infinite;
+}
+
+.orizzontale_b {
+    width: 70vw;
+    height: 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    background-color: white;
+}
+
+.verticale { 
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: mymove_vert 14s infinite;
+}
+
+.verticale_b {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 70vh;
+    background-color: white;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.bersaglio {
+    margin: 0;
+    position: absolute;
+    background-color: #FF3300;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+@keyframes mymove_oriz {
+  0%   {left: 15%;}
+  50%  {left: 85%;}
+  100% {left: 15%;}
+}
+
+@keyframes mymove_vert {
+  0%   {top: 15%;}
+  50%  {top: 85%;}
+  100% {top: 15%;}
+}
+
+.bersaglio_zoom {
+    width: 70vh;
+    height: 70vh;
+    border: solid 10px white;
+    border-radius: 70vh;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: mymove_circle 10s infinite;
+
+}
+
+@keyframes mymove_circle {
+  0%   {width: 100px; height: 100px;}
+  50%  {width: 70vh; height: 70vh;}
+  100% {width: 100px; height: 100px;}
+}
+
+.rettangolo_b {
+    width: 70vw;
+    height: 70vh;
+    border: solid 10px white;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.rettangolo_dot {
+    width: 60%;
+    height: 60%;
+    border: dotted 15px white;
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.rettangolo {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: mymove_rettangolo 24s infinite;
+}
+
+@keyframes mymove_rettangolo {
+  0%   {left: 20%;top: 20%;}
+  30%  {left: 80%;top: 20%;}
+  50%  {left: 80%;top: 80%;}
+  80%  {left: 20%;top: 80%;}
+  100% {left: 20%;top: 20%;}
+}
+
+.pianeta {
+    position: absolute;
+    background-color: #FF3300;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.satellite {
+    position: absolute;
+    top: 20%;
+    left: 20%;
+    width: 70px;
+    height: 70px;
+    background-color: white;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: mymove_satellite 24s infinite;
+}
+
+@keyframes mymove_satellite {
+  0%   {left: 35%;top: 35%;}
+  30%  {left: 65%;top: 35%;}
+  50%  {left: 65%;top: 65%;}
+  80%  {left: 35%;top: 65%;}
+  100% {left: 35%;top: 35%;}
+}
+
+.lancetta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 70vh;
+    background-color: white;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: mymove_lancetta 16s infinite;
+    animation-timing-function: linear;
+}
+
+.croce {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 10px;
+    height: 70vh;
+    background-color: white;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    animation: mymove_lancetta 16s infinite;
+    animation-timing-function: linear;
+}
+
+.croce::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 70vh;
+    height: 10px;
+    background-color: white;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+@keyframes mymove_lancetta {
+  0%   {transform: translate(-50%, -50%) rotate(0deg);}
+  100% {transform: translate(-50%, -50%) rotate(359deg);}
+}
+
+.centro {
+    width: 50px;
+    height: 50px;
+    border-radius: 50px;
+    margin: 0;
+    position: absolute;
+    background-color: white;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+div:hover {
+  animation: mymoveSelection 1s;
+}
+
+@keyframes mymoveSelection {
+  0%   {background-color: white;}
+  100% {background-color: black;}
+}
+
 .specchietto_cl {
     position: fixed;
     background-color: blue;
-    width: 400px;
-    height: 200px;
-    left: 100px;
+    top: 35vh;
+    left: 50vw;
+    width: 50vw;
+    height: 35vh;
+    position: fixed;
 }
-
+/*
 .specchietto_cl:hover {
     background-color: black;
 }
+*/
